syntax = "proto3";

package faildetector;

option go_package = "github.com/maxpoletaev/kv/faildetector/proto";

message PingRequest {
    uint32 member_id = 1;
}

message PingResponse {
    bool alive = 1;
    bool timeout = 2;
    int64 took_ms = 3;
}

service FailDetectorService {
    rpc Ping(PingRequest) returns (PingResponse);
}
